kubernetes/apps/network/gateway-api/gateways/internal/internal-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal-gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/target: 192.168.2.131
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.2.131
  listeners:
    - name: http-gateway
      port: 80
      protocol: HTTP
      hostname: "*.altena.io"
      allowedRoutes:
        namespaces:
          from: All
    # Catch traffic for Grafana Dashboard
    - name: grafana
      hostname: grafana.altena.io
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: grafana-altena-io
